docs: 更新测试检查清单，标记Task 2.2为已完成
变更：
- 标记Task 2.2（创建测试Study）为已完成 ✅
- 添加已修复问题说明
- 记录前端API超时修复（30秒→120秒）
- 说明Generate Questions的正常耗时（约47秒）

当前进度：
- Phase 1: 数据库Migration ✅
- Phase 2: 本地环境测试 ⏳
  - Task 2.1: 启动服务 ✅
  - Task 2.2: 创建测试Study ✅
  - Task 2.3-2.7: 待测试

--- a/docs/测试检查清单.md
+++ b/docs/测试检查清单.md
@@ -18,7 +18,7 @@
 
 ## 📋 待测试项目
 
-### Task 2.2: 创建测试Study
+### Task 2.2: 创建测试Study ✅
 
 **步骤**:
 1. 打开浏览器：http://localhost:8089/dashboard
@@ -34,13 +34,18 @@ Duration: 15分钟
 Interviewer: 选择任意面试官
 ```
 
-4. 点击生成问题
+4. 点击生成问题（等待约30-60秒）
 5. 保存Study
 
 **验证点**:
-- [ ] Study创建成功
-- [ ] 可以看到访谈链接
-- [ ] 问题生成正常
+- [x] Study创建成功
+- [x] 可以看到访谈链接
+- [x] 问题生成正常
+
+**已修复问题**:
+- ✅ 前端API超时从30秒增加到120秒
+- ✅ 修复了"Generate Questions"超时导致跳回Dashboard的问题
+- ✅ 后端实际成功生成（耗时约47秒），现在前端可以正常等待
 
 ---
 
