大纲生成prompt优化

--- a/docs/03-大纲生成系统.md
+++ b/docs/03-大纲生成系统.md
@@ -1,7 +1,8 @@
 # 访谈问题生成系统
 
-> **版本**: 1.3.5  
-> **最后更新**: 2025-10-24
+> **版本**: 1.3.8
+> **最后更新**: 2025-10-26
+> **重要更新**: 追问生成逻辑优化（方向性指示、Session 抽象化、移除冗余指导）
 
 ---
 
@@ -363,16 +364,448 @@ console.log('✅ Questions generated successfully');
    - 检查 `outline_debug_language` 参数
    - 检查 Prompt 中的语言指令
 
+4. **生成的 Session 数量不正确** (v1.3.6 已修复)
+   - 问题：GPT 有时会生成错误数量的 Sessions
+   - 解决方案：智能补全机制（自动检测并补全缺失的 Sessions）
+
+---
+
+## 🔧 智能补全机制 (v1.3.6)
+
+### 问题背景
+
+在深度访谈模式（David）中，GPT 有时会生成错误数量的 Sessions：
+- 用户请求 10 个 Sessions，GPT 可能只生成 8 个
+- 用户请求 5 个 Sessions，GPT 可能生成 6 个
+
+### 解决方案
+
+**三层保障机制**：
+
+#### 1. Prompt 强化（预防）
+
+在 User Prompt 中添加严格的数量要求：
+
+```typescript
+⚠️ **STRICT SESSION COUNT REQUIREMENT** ⚠️:
+You MUST generate EXACTLY ${requestedCount} sessions - no more, no less.
+- ❌ Do NOT generate ${requestedCount + 1} sessions
+- ❌ Do NOT generate ${requestedCount - 1} sessions
+- ✅ Generate EXACTLY ${requestedCount} complete sessions
+- If you generate the wrong number, the system will malfunction
+```
+
+#### 2. 智能补全（修复）
+
+如果 GPT 生成的数量不足，自动调用 GPT 补全：
+
+```typescript
+// 检测数量不匹配
+if (actualCount < requestedCount) {
+  const missing = requestedCount - actualCount;
+
+  // 调用 GPT 补全剩余 Sessions
+  const complementPrompt = `
+    You previously generated ${actualCount} sessions.
+    Now generate EXACTLY ${missing} MORE sessions.
+    Continue from Session ${actualCount + 1} to Session ${requestedCount}.
+  `;
+
+  // 合并原始和补全的 Sessions
+  allSessions = [...originalSessions, ...complementSessions];
+}
+```
+
+#### 3. 智能截断（修复）
+
+如果 GPT 生成的数量过多，自动截断：
+
+```typescript
+if (actualCount > requestedCount) {
+  sessions = sessions.slice(0, requestedCount);
+}
+```
+
+### 技术实现
+
+**位置**: `backend/src/controllers/questions.controller.ts`
+
+**核心逻辑**：
+
+```typescript
+// 1. 验证生成的数量
+const actualCount = parsedContent.questions?.length || 0;
+const requestedCount = Math.min(body.number, 10);
+
+// 2. 记录详细日志
+console.log('📊 Session Count Verification:', {
+  requested: requestedCount,
+  actualGenerated: actualCount,
+  match: actualCount === requestedCount ? '✅' : '❌'
+});
+
+// 3. 智能补全或截断
+if (actualCount < requestedCount) {
+  // 调用 GPT 补全
+  const complementResponse = await openaiClient.chat.completions.create({...});
+  parsedContent.questions = [...original, ...complement];
+} else if (actualCount > requestedCount) {
+  // 截断多余的
+  parsedContent.questions = parsedContent.questions.slice(0, requestedCount);
+}
+```
+
+### 效果
+
+- ✅ **准确性**: 100% 保证生成正确数量的 Sessions
+- ✅ **质量**: 补全的 Sessions 与原始 Sessions 质量一致
+- ✅ **连贯性**: 补全的 Sessions 自然衔接原始内容
+- ✅ **可追溯**: 详细的日志记录，便于调试
+
+### 相关 Prompt 更新
+
+**文件**:
+- `backend/src/lib/prompts/generate-sessions.ts`
+- `backend/src/lib/prompts/generate-market-research-sessions.ts`
+- `backend/src/lib/prompts/generate-product-research-sessions.ts`
+
+**更新内容**: 添加严格的数量要求警告
+
+---
+
+## 🎨 深度访谈 Prompt 优化 (v1.3.7)
+
+### 优化目标
+
+针对深度访谈模式（David）的 Prompt 进行全面优化，提升生成的访谈大纲质量：
+
+1. **强化开放性问题设计原则**
+2. **添加 Study Objective 必问项识别逻辑**
+3. **优化追问设计策略**（关键问题 vs 即兴追问）
+4. **清理本地化相关内容**（已拆分到独立函数）
+
+### 1. 开放性问题设计原则 🎯
+
+**核心理念**: 让参与者定义自己的体验，不预设立场或假设。
+
+#### ❌ 避免的问题类型
+
+**引导性问题**（假设问题存在）:
+```
+❌ "How difficult is it to manage your tasks?"
+❌ "How often do you struggle with [task]?"
+❌ "What challenges do you face when..."
+```
+
+**暗示性问题**（假设需求存在）:
+```
+❌ "What features would you like to see?"
+❌ "What improvements would you suggest?"
+❌ "Don't you think X would be helpful?"
+```
+
+**假设性问题**（假设体验是正面或负面的）:
+```
+❌ "What do you like about [Feature]?"
+❌ "How useful is [Feature]?"
+❌ "What frustrates you about..."
+```
+
+#### ✅ 推荐的问题类型
+
+**行为探索问题**:
+```
+✅ "Tell me about how you currently manage your tasks."
+✅ "Walk me through your typical workflow for [scenario]."
+✅ "Can you describe a recent time when you [did X]?"
+```
+
+**体验描述问题**:
+```
+✅ "What's your experience been like with [topic]?"
+✅ "How does [Product] fit into your daily routine?"
+✅ "Tell me about your experience using [Feature]."
+```
+
+**具体案例问题**:
+```
+✅ "Can you walk me through a specific recent example?"
+✅ "What happened the last time you [did X]?"
+✅ "Tell me about a time when..."
+```
+
+#### 关键原则
+
+1. **聚焦行为**：问人们做什么，而非想什么
+2. **避免判断词**：不使用 "difficult", "struggle", "problem", "useful" 等词（除非用户先提到）
+3. **中性探索**：使用 "tell me about", "walk me through", "describe", "what's your experience"
+4. **具体案例**：要求具体的过去行为，而非假设或意见
+
+### 2. Study Objective 必问项识别 🔑
+
+**功能**: 自动识别研究目标中明确要求的必问问题或数据收集项。
+
+#### 识别逻辑
+
+Prompt 会分析 Research Objective，识别：
+- 明确要求的问题
+- 必须收集的数据点
+- 特定的功能或主题验证需求
+- 关键的用户群体或场景
+
+#### 融入策略
+
+**战略性放置**:
+- 人口统计问题 → Session 1（破冰环节）
+- 特定功能验证 → Session 3（核心功能深挖）
+- 竞品对比 → Session 5（竞品对比环节）
+
+**明确标记**:
+```
+Q3.2 [Interviewer notes: [MUST-ASK per Study Objective] This question validates
+the new feature mentioned in research objective...]
+Question: "Tell me about your experience with [specific feature]."
+```
+
+#### 效果
+
+- ✅ 确保关键研究目标不会被遗漏
+- ✅ 必问项自然融入访谈流程
+- ✅ 面试官清楚知道哪些问题是必须问的
+
+### 3. 智能追问策略 🎯
+
+**核心理念**: 关键问题深挖，一般问题灵活。
+
+#### A. 硬编码追问（仅用于关键问题）
+
+**使用条件**（必须同时满足）:
+- ✅ 问题直接关联核心研究目标
+- ✅ 问题是 Study Objective 的必问项
+- ✅ 缺失追问会导致关键洞察缺失
+- ✅ 追问探索的维度不会自然涌现
+
+**格式**:
+```
+**Follow-up Strategy:**
+[Condition 1: If user mentions X] "Follow-up question..."
+[Condition 2: If user describes Y] "Follow-up question..."
+**Skip Conditions:** If context is awkward or user has already answered, skip
+```
+
+**示例**:
+```
+Q3.1 [MUST-ASK] Question: "Tell me about your experience with [new feature]."
+
+**Follow-up Strategy:**
+[If user describes usage] "Can you walk me through a specific recent example?"
+[If user mentions any friction] "Tell me more about that - what happened?"
+**Skip Conditions:** If user has already provided detailed examples, skip follow-ups
+```
+
+#### B. 即兴追问（用于一般问题）
+
+**使用条件**:
+- 问题不是核心研究目标的关键部分
+- 追问可以根据用户回答灵活调整
+- 不需要特定维度的深挖
+
+**标记方式**:
+```
+Q2.3 [Interviewer notes: [Rely on impromptu follow-ups based on user response]]
+Question: "What else happens in this process?"
+```
+
+**优势**:
+- 避免过度脚本化
+- 访谈更自然、更像真实对话
+- 充分利用 Retell AI 的即兴追问能力
+
+#### C. 标准即兴追问指令
+
+每个 Session 都包含标准指导：
+
+```
+**Impromptu Follow-up Guidance**:
+If the user shares any new information relevant to our research goals,
+conduct 1-2 follow-up questions to understand deeply (why/what/how/impact).
+If irrelevant, briefly acknowledge and continue. For questions with set
+follow-ups, skip if user has already answered in main response. When
+acknowledging responses, vary your expressions: 'okay,' 'I see,'
+'understood,' 'that makes sense,' 'got it,' 'right,' etc.
+```
+
+### 4. 本地化内容清理 🧹
+
+**变更**:
+- ❌ 移除详细的文化适配指令
+- ❌ 移除 "Localization Reminders" 章节
+- ✅ 简化语言配置（仅保留基本语言要求）
+- ✅ 添加说明：文化适配在独立步骤中处理
+
+**原因**:
+- 本地化功能已拆分到 `backend/src/lib/prompts/localize-outline.ts`
+- 大纲生成聚焦内容质量，本地化聚焦文化适配
+- 职责分离，提升各自质量
+
+### 5. 市场调研特定优化
+
+#### 痛点发现（而非假设）
+
+**旧方法**（假设痛点存在）:
+```
+❌ "What frustrates you the most when dealing with [scenario]?"
+```
+
+**新方法**（让痛点自然涌现）:
+```
+✅ "Tell me about your current process for [scenario]."
+→ [If user mentions friction] "Tell me more about that - what happened?"
+```
+
+#### 理想解决方案探索
+
+**旧方法**（直接问功能需求）:
+```
+❌ "What features would you like to see?"
+```
+
+**新方法**（探索理想状态）:
+```
+✅ "If you could wave a magic wand, how would this process work ideally?"
+→ "What's most important in that ideal scenario?"
+```
+
+### 6. 产品调研特定优化
+
+#### 功能发现（而非假设）
+
+**旧方法**（假设用户已发现功能）:
+```
+❌ "How useful is [Feature]?"
+```
+
+**新方法**（探索实际使用）:
+```
+✅ "Tell me about your experience using [Product]."
+→ [If user mentions feature] "How did you first come across this feature?"
+→ "What's your understanding of what it does?"
+→ "How often do you use it? In what situations?"
+```
+
+#### 竞品对比策略
+
+**旧方法**（直接问竞品）:
+```
+❌ "Which competitors have you used?"
+```
+
+**新方法**（自然引出对比）:
+```
+✅ "Before using [Product], what tools or methods did you use for [task]?"
+→ [If they mention alternatives] "What's different about your experience
+   with [Product] compared to [Alternative]?"
+```
+
+### 优化效果
+
+**质量提升**:
+- ✅ 生成的问题更加开放、无偏见
+- ✅ 减少引导性问题导致的数据偏差
+- ✅ 访谈流程更自然、更像真实对话
+
+**目标达成**:
+- ✅ 关键研究目标的必问项不会遗漏
+- ✅ 核心问题得到深度挖掘
+- ✅ 一般问题保持灵活性
+
+**用户体验**:
+- ✅ 参与者感觉更舒适，愿意分享真实体验
+- ✅ 面试官有清晰的指导，知道何时深挖、何时灵活
+- ✅ 访谈节奏更自然，不会感觉机械
+
+### 影响的文件
+
+- `backend/src/lib/prompts/generate-market-research-sessions.ts` (248 lines → 279 lines)
+- `backend/src/lib/prompts/generate-product-research-sessions.ts` (241 lines → 274 lines)
+
+---
+
+## 🎯 追问生成逻辑优化 (v1.3.8)
+
+### 优化目标
+
+进一步优化追问生成逻辑，使访谈执行更灵活、更自然：
+
+1. **移除即兴追问相关内容**（系统自动处理）
+2. **追问改为方向性指示**（而非固定句子）
+3. **Session 案例抽象化**（避免过度具象）
+4. **删除过拟合规则**（如 AI collection）
+
+### 核心变更
+
+#### 1. 移除即兴追问指导 🧹
+
+**删除内容**:
+- ❌ "Standard Impromptu Instructions" 章节
+- ❌ "Impromptu Follow-up Guidance" 内容
+
+**原因**: 访谈执行系统（Retell AI）已内置即兴追问能力，在大纲生成阶段重复指导是冗余的。
+
+#### 2. 追问改为方向性指示 🎯
+
+**旧格式**（固定句子）:
+```
+[If user mentions friction] "Can you tell me more? What happened?"
+```
+
+**新格式**（方向性指示）:
+```
+[If user mentions friction] → Probe for: specific examples, impact, solutions
+```
+
+**优势**: Agent 可根据语境灵活措辞，访谈更自然。
+
+#### 3. Session 案例抽象化 📋
+
+**旧格式**（过于具象）:
+```
+- Session 1: Ice-breaking + Current behavior
+- Session 2: Pain points deep dive
+- Session 5: AI/Technology expectations
+```
+
+**新格式**（抽象原则）:
+```
+Session Flow: Intro → Open Exploration → Targeted Collection → Closure
+Session Themes: Early (context) → Middle (deep dive) → Later (synthesis)
+```
+
+#### 4. 删除过拟合规则 🧹
+
+**删除**: "AI/Technology Expectations" 章节（逆向工程时过拟合的特定案例）
+
+### 优化效果
+
+- ✅ 访谈更灵活、更自然
+- ✅ 大纲更适配具体研究目标
+- ✅ 职责分离：大纲聚焦关键问题，执行聚焦灵活措辞
+
+### 影响的文件
+
+- `backend/src/lib/prompts/generate-market-research-sessions.ts` (279 lines → 272 lines)
+- `backend/src/lib/prompts/generate-product-research-sessions.ts` (279 lines → 272 lines)
+
 ---
 
 ## 📚 相关文档
 
-- [大纲本地化功能](./03-大纲本地化功能.md)
+- [大纲本地化功能](./04-大纲本地化功能.md)
 - [技术架构](./01-技术架构.md)
 - [数据库设计](./02-数据库设计.md)
 
 ---
 
-**维护者**: Userology 开发团队  
-**最后更新**: 2025-10-24
+**维护者**: Userology 开发团队
+**最后更新**: 2025-10-26
 
