两步生成大纲功能实现done

--- a/docs/任务清单.md
+++ b/docs/任务清单.md
@@ -1,31 +1,56 @@
 # 任务清单
 
-> **最后更新**: 2025-10-24  
-> **当前版本**: v1.3.5
+> **最后更新**: 2025-10-30
+> **当前版本**: v1.4.0
 
 ---
 
 ## 🔥 当前任务
 
-### [x] 初始化项目状态文档系统
-- [x] 扫描项目核心功能模块
-- [x] 创建任务清单.md
-- [x] 补全核心功能模块文档
-  - [x] 04-访谈问题生成系统.md
-  - [x] 05-访谈分析系统.md
-  - [x] 06-Retell-AI语音交互.md
-  - [x] 07-跨访谈洞察生成.md
-- [x] 更新 CHANGELOG.md
-- [x] 更新 Augment-Memories.md
+### 无进行中的任务
 
 ---
 
 ## 📋 待办任务
 
+### 功能开发
+- [ ] 测试两步大纲生成系统
+  - [ ] 测试 Session 配置传导功能
+  - [ ] 测试必问问题功能
+  - [ ] 验证生成的大纲质量
+
 ### 文档完善
 - [ ] 补全 API 文档
 - [ ] 补全部署文档
 - [ ] 补全开发指南
+
+---
+
+## ✅ 已完成任务
+
+### 2025-10-30
+- [x] **两步大纲生成系统完整实现** ✨
+  - [x] 数据库迁移（添加 outline_skeleton, outline_generation_status, skeleton_generated_at）
+  - [x] Session 配置传导到骨架生成
+    - [x] 后端 Prompt 接收 manualSessions 参数
+    - [x] 前端传递用户输入的 Session 主题
+    - [x] AI 严格遵循用户指定的主题
+  - [x] 必问问题功能
+    - [x] 类型定义添加 must_ask_questions 字段
+    - [x] SessionCard UI 添加必问问题输入
+    - [x] 完整大纲生成 Prompt 处理必问问题
+    - [x] 自然融入访谈流程并标记
+  - [x] 后端 API 实现
+    - [x] POST /api/outlines/skeleton
+    - [x] PATCH /api/outlines/:id/skeleton
+    - [x] POST /api/outlines/:id/full-outline
+  - [x] 前端 UI 实现
+    - [x] SessionCard 组件（编辑 Session）
+    - [x] SkeletonReview 组件（预览骨架）
+    - [x] questions.tsx 主流程逻辑
+  - [x] 状态管理（Zustand Store）
+  - [x] 更新 CHANGELOG.md (v1.4.0)
+  - [x] 更新任务清单.md
 
 ---
 
