两步初稿功能彻底complete

--- a/docs/任务清单.md
+++ b/docs/任务清单.md
@@ -1,7 +1,7 @@
 # 任务清单
 
 > **最后更新**: 2025-10-30
-> **当前版本**: v1.4.0
+> **当前版本**: v1.4.2
 
 ---
 
@@ -17,6 +17,13 @@
 - [ ] 测试两步大纲生成系统
   - [ ] 测试 Session 配置传导功能
   - [ ] 测试必问问题功能
+  - [ ] 测试多层次追问策略
+  - [ ] 测试智能问题数量分配
+  - [ ] 测试 Session Depth Level 系统
+    - [ ] 验证 AI 判断的 depth level 是否合理
+    - [ ] 验证用户调整 depth level 功能
+    - [ ] 验证完整大纲是否严格遵循 depth level
+  - [ ] 验证结束访谈提示
   - [ ] 验证生成的大纲质量
 
 ### 文档完善
@@ -28,7 +35,42 @@
 
 ## ✅ 已完成任务
 
-### 2025-10-30
+### 2025-10-30 (v1.4.2)
+- [x] **Session Depth Level 系统** 🎯
+  - [x] 添加 `SessionDepthLevel` 类型定义（high/medium/low）
+  - [x] 更新骨架生成 Prompt
+    - [x] 添加 "Session Depth Level Assignment" 部分
+    - [x] AI 根据研究目标判断每个 Session 的深度等级
+    - [x] 更新 Output Format 和 Quality Checklist
+  - [x] 更新完整大纲生成 Prompt
+    - [x] 显示每个 Session 的 depth level
+    - [x] 严格遵循 depth level 分配问题数量
+  - [x] 添加 Depth Level 选择器 UI
+    - [x] 在 SessionCard 中显示三个按钮（Low/Medium/High）
+    - [x] 颜色编码（灰色/蓝色/紫色）
+    - [x] 显示 AI 建议和问题数量
+    - [x] 支持用户调整
+  - [x] 更新 CHANGELOG.md (v1.4.2)
+  - [x] 更新任务清单.md
+
+### 2025-10-30 (v1.4.1)
+- [x] **大纲生成 Prompt 优化 - 用户体验提升** 🎨
+  - [x] 结束访谈提示
+    - [x] 在最后一个 Session 添加明确的"点击结束访谈按钮"提示
+  - [x] 多层次追问策略（L1 → L2 → L3）
+    - [x] 设计分层追问机制（Surface → Examples → Impact）
+    - [x] 更新 Follow-up Strategy 部分
+    - [x] 添加详细示例和指导原则
+  - [x] 智能问题数量分配
+    - [x] 根据 Session 优先级分配 4-6 个问题
+    - [x] 高优先级 Session: 5-6 个问题
+    - [x] 中优先级 Session: 4-5 个问题
+    - [x] 低优先级 Session: 4 个问题
+  - [x] 修复 researchType 字段导致的 500 错误
+  - [x] 更新 CHANGELOG.md (v1.4.1)
+  - [x] 更新任务清单.md
+
+### 2025-10-30 (v1.4.0)
 - [x] **两步大纲生成系统完整实现** ✨
   - [x] 数据库迁移（添加 outline_skeleton, outline_generation_status, skeleton_generated_at）
   - [x] Session 配置传导到骨架生成
