docs: 修正文档中的不准确信息 - 更新 API 端点、数据结构和版本号

--- a/docs/01-技术架构.md
+++ b/docs/01-技术架构.md
@@ -1,7 +1,7 @@
 # Userology 技术架构
 
-> **版本**: 1.1.5  
-> **最后更新**: 2025-10-23
+> **版本**: 1.4.5
+> **最后更新**: 2025-10-31
 
 ---
 
@@ -200,26 +200,49 @@ DELETE /api/interviews/:id
 
 #### 大纲生成
 
+**两步大纲生成系统** (v1.4.0+):
+
 ```typescript
-// 生成访谈问题 (Lisa/Bob)
-POST /api/generate-interview-questions
+// Step 1: 生成骨架
+POST /api/outlines/skeleton
 Body: {
-  name, objective, number, context, 
-  researchType, interviewerId
+  name, objective, context, session_count,
+  duration_minutes, draft_language, researchType,
+  manualSessions
 }
 
-// 生成访谈 sessions (David)
-POST /api/generate-interview-sessions
+// Step 2: 更新骨架（使用通用 API）
+PUT /api/interviews/:id
 Body: {
-  name, objective, number, context, 
-  researchType, interviewerId
+  outline_skeleton: OutlineSkeleton
 }
+
+// Step 3: 生成完整大纲
+POST /api/outlines/:id/full-outline
 
 // 本地化大纲
 POST /api/questions/localize-outline
 Body: {
   draftOutline, targetLanguage,
   researchObjective, studyName, description
+}
+```
+
+**传统模式** (向后兼容):
+
+```typescript
+// 生成访谈问题 (Lisa/Bob)
+POST /api/generate-interview-questions
+Body: {
+  name, objective, number, context,
+  researchType, interviewerId
+}
+
+// 生成访谈 sessions (David)
+POST /api/generate-interview-sessions
+Body: {
+  name, objective, number, context,
+  researchType, interviewerId
 }
 ```
 
@@ -402,6 +425,6 @@ FRONTEND_URL=https://userology.xin
 
 ---
 
-**维护者**: Userology 开发团队  
-**最后更新**: 2025-10-23
+**维护者**: Userology 开发团队
+**最后更新**: 2025-10-31
 
