--- a/docs/02-数据库设计.md
+++ b/docs/02-数据库设计.md
@@ -1,7 +1,7 @@
 # Userology 数据库设计
 
-> **版本**: 1.1.5  
-> **最后更新**: 2025-10-23
+> **版本**: 1.4.5
+> **最后更新**: 2025-10-31
 
 ---
 
@@ -124,6 +124,9 @@
 | **localized_outline** | JSONB | **本地化大纲** | v1.1.0+ |
 | **outline_debug_language** | TEXT | **调试语言** | v1.1.0+ |
 | **outline_interview_language** | TEXT | **访谈语言** | v1.1.0+ |
+| **outline_skeleton** | JSONB | **大纲骨架** | v1.4.0+ |
+| **outline_generation_status** | VARCHAR | **大纲生成状态** | v1.4.0+ |
+| **skeleton_generated_at** | TIMESTAMP | **骨架生成时间** | v1.4.0+ |
 | created_at | TIMESTAMP | 创建时间 | DEFAULT NOW() |
 
 #### questions 字段结构
@@ -131,8 +134,9 @@
 ```typescript
 {
   id: string;              // 问题 ID
-  question: string;        // 问题内容
+  question: string;        // 问题内容（Session 文本）
   follow_up_count: number; // 追问次数
+  depth_level?: 'high' | 'medium' | 'low'; // Session 深度等级 (v1.4.2+)
 }[]
 ```
 
@@ -140,8 +144,8 @@
 
 | 字段 | 说明 | 示例 |
 |------|------|------|
-| draft_outline | 初稿大纲（调试语言版本） | 中文问题列表 |
-| localized_outline | 本地化大纲（访谈语言版本） | 英文问题列表 |
+| draft_outline | 初稿大纲（调试语言版本） | Array<{session_text, depth_level}> |
+| localized_outline | 本地化大纲（访谈语言版本） | Array<{session_text, depth_level}> |
 | outline_debug_language | 调试语言代码 | 'zh-CN', 'en-US' |
 | outline_interview_language | 访谈语言代码 | 'en-US', 'ja-JP' |
 
@@ -150,7 +154,42 @@
 2. 一键本地化到英文 → 存储在 `localized_outline`
 3. 访谈时使用 `questions` 字段（可选择初稿或本地化版本）
 
-详见: [大纲本地化功能文档](./03-大纲本地化功能.md)
+详见: [大纲本地化功能文档](./04-大纲本地化功能.md)
+
+#### 两步大纲生成字段 (v1.4.0+)
+
+| 字段 | 说明 | 数据结构 |
+|------|------|---------|
+| outline_skeleton | 大纲骨架（Session 主题、目标、背景信息） | OutlineSkeleton |
+| outline_generation_status | 大纲生成状态 | 'draft', 'skeleton_generated', 'draft_generated', 'localized' |
+| skeleton_generated_at | 骨架生成时间 | TIMESTAMP |
+
+**OutlineSkeleton 结构**:
+```typescript
+{
+  sessions: Array<{
+    session_number: number;
+    session_title: string;
+    session_goal: string;
+    background_information: string[];
+    must_ask_questions: string[];
+    depth_level?: 'high' | 'medium' | 'low';
+    ai_suggested_depth_level?: 'high' | 'medium' | 'low';
+  }>;
+  metadata: {
+    total_sessions: number;
+    estimated_duration_minutes: number;
+    draft_language: string;
+  };
+}
+```
+
+**使用场景**:
+1. 生成骨架 → 存储在 `outline_skeleton`
+2. 用户 Review & 编辑 → 更新 `outline_skeleton`
+3. 生成完整大纲 → 存储在 `draft_outline`
+
+详见: [大纲生成系统文档](./03-大纲生成系统.md)
 
 **关系**:
 - 多对一: interview → user
