--- a/docs/03-大纲生成系统.md
+++ b/docs/03-大纲生成系统.md
@@ -141,15 +141,17 @@ POST /api/outlines/skeleton
 
 **API 端点**：
 ```
-PATCH /api/outlines/:id/skeleton
+PUT /api/interviews/:id
 ```
 
 **请求参数**：
 ```typescript
 {
-  skeleton: OutlineSkeleton; // 更新后的骨架
+  outline_skeleton: OutlineSkeleton; // 更新后的骨架
 }
 ```
+
+**注意**: 实际实现中使用的是通用的 `updateInterview` API，而不是专门的 `updateOutlineSkeleton` API。
 
 ---
 
@@ -398,7 +400,7 @@ ALTER TABLE interview ADD COLUMN skeleton_generated_at TIMESTAMP WITH TIME ZONE;
 | 字段 | 类型 | 说明 |
 |------|------|------|
 | `outline_skeleton` | JSONB | 存储骨架数据（sessions + metadata） |
-| `outline_generation_status` | VARCHAR | 生成状态（'skeleton_generated', 'full_outline_generated'） |
+| `outline_generation_status` | VARCHAR | 生成状态（'draft', 'skeleton_generated', 'draft_generated', 'localized'） |
 | `skeleton_generated_at` | TIMESTAMP | 骨架生成时间 |
 | `draft_outline` | JSONB | 完整大纲（Array<{session_text, depth_level}>） |
 | `outline_debug_language` | TEXT | 初稿语言代码（如 'zh-CN'） |
@@ -478,21 +480,30 @@ export const generateOutlineSkeleton = async (req: Request, res: Response) => {
 };
 ```
 
-#### 2. `updateOutlineSkeleton` (v1.4.0+)
+#### 2. 更新骨架（Step 2）
 
-更新骨架（Step 2）
+**注意**: 实际实现中，骨架更新使用的是通用的 `updateInterview` API，而不是专门的 `updateOutlineSkeleton` 函数。
 
+**前端调用**:
 ```typescript
-export const updateOutlineSkeleton = async (req: Request, res: Response) => {
-  const { id } = req.params;
-  const { skeleton } = req.body;
-
-  // 更新 interview 的 outline_skeleton 字段
-  await InterviewService.updateInterview({
+// frontend/src/services/outline.service.ts
+static async updateSkeleton(interviewId: string, skeleton: OutlineSkeleton) {
+  const response = await apiClient.put(`/interviews/${interviewId}`, {
     outline_skeleton: skeleton
-  }, id);
+  });
+  return response.data;
+}
+```
 
-  res.status(200).json({ skeleton, status: 'skeleton_generated' });
+**后端实现**:
+```typescript
+// backend/src/controllers/interviews.controller.ts
+export const updateInterview = async (req: Request, res: Response) => {
+  const { id } = req.params;
+  const payload = req.body; // 包含 outline_skeleton
+
+  const result = await InterviewService.updateInterview(payload, id);
+  res.status(200).json(result);
 };
 ```
 
@@ -508,17 +519,31 @@ export const generateFullOutlineFromSkeleton = async (req: Request, res: Respons
   const interview = await InterviewService.getInterviewById(id);
   const skeleton = interview.outline_skeleton;
 
+  // 1.1 确保 skeleton.metadata.draft_language 存在（v1.4.5 Bug 修复）
+  if (!skeleton.metadata) {
+    skeleton.metadata = {};
+  }
+  if (!skeleton.metadata.draft_language) {
+    skeleton.metadata.draft_language = interview.outline_debug_language || 'en-US';
+    console.log('⚠️ AI did not include draft_language, manually added:', skeleton.metadata.draft_language);
+  }
+
   // 2. 调用完整大纲生成 Prompt
+  const researchType = interview.researchType || 'product';
+  const systemPrompt = researchType === 'market'
+    ? SYSTEM_PROMPT_FULL_OUTLINE_MARKET
+    : SYSTEM_PROMPT_FULL_OUTLINE_PRODUCT;
+
   const completion = await openaiClient.chat.completions.create({
     model: "gpt-4o",
     temperature: 0.7,
     messages: [
-      { role: "system", content: SYSTEM_PROMPT_FULL_OUTLINE },
+      { role: "system", content: systemPrompt },
       { role: "user", content: generateFullOutlinePrompt({
         skeleton,
         objective: interview.objective,
         context: interview.context,
-        researchType: interview.researchType
+        researchType
       })}
     ],
     response_format: { type: "json_object" }
@@ -527,14 +552,30 @@ export const generateFullOutlineFromSkeleton = async (req: Request, res: Respons
   // 3. 解析完整大纲
   const result = JSON.parse(completion.choices[0].message?.content);
 
+  // 3.1 转换为新格式（v1.4.3+）
+  const questionsToSave = result.questions.map((item: any) => {
+    if (typeof item === 'object' && item.session_text) {
+      return item; // 已经是新格式
+    }
+    // 旧格式转换
+    return {
+      session_text: item,
+      depth_level: 'medium'
+    };
+  });
+
   // 4. 保存到数据库
   await InterviewService.updateInterview({
-    draft_outline: result.questions,
+    draft_outline: questionsToSave,
     description: result.description,
-    outline_generation_status: 'full_outline_generated'
+    outline_generation_status: 'draft_generated'
   }, id);
 
-  res.status(200).json(result);
+  res.status(200).json({
+    draft_outline: questionsToSave,
+    description: result.description,
+    status: 'draft_generated'
+  });
 };
 ```
 
