docs: 修正数据库结构和 API 文档 - 对照实际代码库更新

--- a/docs/02-数据库设计.md
+++ b/docs/02-数据库设计.md
@@ -119,7 +119,8 @@
 | quotes | JSONB[] | 引用列表 (旧) | |
 | executive_summary | TEXT | 研究级总结 | |
 | objective_deliverables | JSONB | 目标交付物 | |
-| cross_interview_insights | JSONB | 跨访谈洞察 | |
+| **cross_interview_insights** | JSONB | **跨访谈洞察（当前）** | **v1.0.5+** |
+| evidence_bank | JSONB | 证据库（已废弃） | 向后兼容 |
 | **draft_outline** | JSONB | **初稿大纲** | v1.1.0+ |
 | **localized_outline** | JSONB | **本地化大纲** | v1.1.0+ |
 | **outline_debug_language** | TEXT | **调试语言** | v1.1.0+ |
@@ -218,9 +219,9 @@
 | is_viewed | BOOLEAN | 是否已查看 | DEFAULT false |
 | candidate_status | TEXT | 候选人状态 | 'SELECTED', 'NOT_SELECTED' |
 | tab_switch_count | INTEGER | 切换标签次数 | |
-| key_insights | JSONB | 关键洞察 (旧) | 向后兼容 |
-| important_quotes | JSONB | 重要引用 (旧) | 向后兼容 |
-| insights_with_evidence | JSONB | 洞察+证据 (新) | v1.0.5+ |
+| **insights_with_evidence** | JSONB | **洞察+证据（当前）** | **v1.0.5+** |
+| key_insights | JSONB | 关键洞察（已废弃） | 向后兼容 |
+| important_quotes | JSONB | 重要引用（已废弃） | 向后兼容 |
 | created_at | TIMESTAMP | 创建时间 | DEFAULT NOW() |
 
 #### analytics 字段结构
@@ -238,21 +239,71 @@
 
 #### insights_with_evidence 字段结构 (v1.0.5+)
 
+**当前使用的数据结构**:
+
 ```typescript
-{
+export interface InsightWithEvidence {
   id: string;
   content: string;
-  category: string;
-  evidence: Array<{
-    quote: string;
-    timestamp: number;
-    context: string;
-  }>;
-}[]
+  category: 'need' | 'pain_point' | 'behavior' | 'preference' | 'mental_model' | 'unexpected';
+  supporting_quotes: SupportingQuote[];
+}
+
+export interface SupportingQuote {
+  id: string;
+  quote: string;
+  timestamp: number;
+  speaker: 'user' | 'agent';
+}
 ```
+
+**设计理念**:
+- 每个洞察直接包含 2-3 个支持性引用
+- 引用包含时间戳，方便定位原始对话
+- 区分用户和 AI 的发言
+
+**数据迁移** (v1.0.5):
+- 旧字段 `key_insights` 和 `important_quotes` 已废弃
+- 新字段 `insights_with_evidence` 合并了两者
+- 旧字段保留用于向后兼容
 
 **关系**:
 - 多对一: response → interview
+
+---
+
+#### 跨访谈洞察字段 (v1.0.5+)
+
+**cross_interview_insights 结构**:
+
+```typescript
+export interface CrossInterviewInsight {
+  id: string;
+  title: string;
+  description: string;
+  category: 'consensus' | 'divergent' | 'unexpected' | 'critical';
+  importance: 'high' | 'medium' | 'low';
+  user_count?: string; // e.g., "4 out of 5 users"
+  supporting_quotes: SupportingQuote[]; // 2-4 quotes embedded
+}
+
+export interface SupportingQuote {
+  user: string;
+  quote: string;
+  interview_id: string;
+  timestamp?: number;
+}
+```
+
+**设计理念**:
+- 每个洞察直接包含支持性引用（无需通过 ID 关联）
+- 前端无需额外逻辑匹配 evidence 和 insight
+- 与单访谈总结的设计保持一致
+
+**数据迁移** (v1.0.5):
+- 旧结构: `cross_interview_insights` + 独立的 `evidence_bank`
+- 新结构: `cross_interview_insights` 中直接嵌入 `supporting_quotes`
+- `evidence_bank` 字段已废弃，保留用于向后兼容
 
 ---
 
