--- a/docs/06-访谈分析系统.md
+++ b/docs/06-访谈分析系统.md
@@ -89,7 +89,13 @@ POST /api/analytics/generate
 
 ### 模块 2: 深度总结 (Summary)
 
-**目的**: 提取关键洞察和重要引用，支持证据链
+**目的**: 提取 3-5 个关键洞察，每个洞察包含 2-3 个支持性引用
+
+**API 端点**:
+```
+POST /api/analytics/summary
+POST /api/analytics/summary/regenerate/:callId  # 重新生成
+```
 
 **数据结构**:
 ```typescript
@@ -403,22 +409,38 @@ if (response.key_insights && response.important_quotes) {
 ### API 端点
 
 ```
-POST /api/analytics/regenerate
+POST /api/analytics/summary/regenerate/:callId
+```
+
+**请求参数**:
+```typescript
+{
+  callId: string;  // URL 参数
+  interviewId: string;  // Body 参数
+  transcript?: string;  // 可选，如果不提供则从数据库读取
+}
 ```
 
 ### 实现逻辑
 
 ```typescript
-export const regenerateInterviewSummary = async (callId, interviewId, transcript) => {
+export const regenerateInterviewSummary = async (req, res) => {
+  const { callId } = req.params;
+  const { interviewId, transcript } = req.body;
+
   // 1. 清除现有总结
   await ResponseService.saveResponse({
     insights_with_evidence: null,
-    key_insights: null,
-    important_quotes: null
+    key_insights: null,  // 也清除旧格式
+    important_quotes: null  // 也清除旧格式
   }, callId);
-  
+
   // 2. 重新生成
-  return await generateInterviewSummary({ callId, interviewId, transcript });
+  return await InterviewSummaryService.generateInterviewSummary({
+    callId,
+    interviewId,
+    transcript
+  });
 };
 ```
 
